# CFIRSTNET

./: .gitignore  README.md  conda_requirements.txt  py_requirements.txt  train.py
c++/: CMakeLists.txt  main.cpp
src/: data_preprocess.py  dataset.py  layers.py  loss.py  metrics.py  net.py  run.py  transforms.py  utils.py
